fix word wrapping.

--- a/client/sass/irc.sass
+++ b/client/sass/irc.sass
@@ -345,6 +345,7 @@ label
       line-height: 21px
       font-weight: 400
       margin: 0
+      word-wrap: break-word
       img
         max-width: 100%
         max-height: 50vh
